# configurable-algo-NRP

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
benchmark/: comparison_1_10.py  docplexfix.py  main.py  mainbasic.py  test_n035_w4_cp_sat.py  test_n035_w4_cplex.py  test_n035_w4_cplex_modified.py  test_n035_w4_docplex.py  test_n070_w4_cp_sat.py  test_n070_w4_cplex.py  timeonlysolver.py
benchmark/modified_data/: C1.json  H0-n035w4-0.json  H0-n035w4-1.json  H0-n035w4-2.json  H0-n035w8-0.json  H0-n035w8-1.json  Sc-n035w4.json  Sc-n035w8.json  WD-n035w4-1.json  WD-n035w4-2.json  WD-n035w4-3.json  WD-n035w4-4.json  WD-n035w4-5.json  WD-n035w4-6.json  WD-n035w4-7.json  WD-n035w4-8.json  WD-n035w4-9.json  WD-n035w8-0.json  WD-n035w8-1.json  WD-n035w8-2.json  WD-n035w8-3.json  WD-n035w8-4.json  WD-n035w8-5.json  WD-n035w8-6.json  WD-n035w8-7.json  WD-n035w8-8.json  WD-n035w8-9.json
benchmark/scripts/: comparison.txt  export_results_to_csv.py  generate_input_combination.py
documentation/: conflicting_conditions.py  description.md  description_prev.md  diag.puml
documentation/diagrams/: class_diag.puml  component_diag.puml  sequence_diag.puml
documentation/nsp_solver/: index.html
tests/: conftest.py  test_simulator.py  test_solver.py  test_validator.py  test_validator_hard_constraints.py  test_validator_integration.py  test_validator_soft_constraints.py
tests/input_combinations/: combination_generator.py
tests/simulator/: test_simulator.py
tests/solver/: test_solver.py
(+59 files in other folders)
