[metadata]
name = local_nsp_solver
version = 1.0
# author = <Firstname Lastname>
# author_email = youremail@email.com
# description = Your description of the project
# long_description = file: README.md
# long_description_content_type = text/markdown
# url = yourprojecturl.com
# classifiers =
#     Programming Language :: Python :: 3
#     Operating System :: OS Independent
# license_files = LICENSE.txt

[options]
packages = 
    nsp_solver
    nsp_solver.solver
    nsp_solver.simulator
    nsp_solver.validator
    nsp_solver.utils

package_dir =
    = src

[options.extras_require]
testing = 
    cachetools==5.3.3
    chardet==5.2.0
    colorama==0.4.6
    coverage==7.5.1
    diagrams==0.23.4
    distlib==0.3.8
    exceptiongroup==1.2.1
    filelock==3.14.0
    flake8==7.0.0
    graphviz==0.20.1
    iniconfig==2.0.0
    Jinja2==3.1.3
    MarkupSafe==2.1.5
    mccabe==0.7.0
    packaging==24.0
    platformdirs==4.2.1
    pluggy==1.5.0
    pycodestyle==2.11.1
    pyflakes==3.2.0
    pyproject-api==1.6.1
    pytest==8.2.0
    pytest-cov==5.0.0
    tomli==2.0.1
    tox==4.15.0
    typed-ast==1.5.5
    typing_extensions==4.11.0
    virtualenv==20.26.1

[flake8]
max-line-length = 160